# asagi-tables

./: README.md  pyproject.toml
docs/: development.md
src/asagi_tables/: configs.py  main.py
src/asagi_tables/db/: __init__.py  mysql.py  postgresql.py  sqlite.py
src/asagi_tables/queries/: templates.py
src/asagi_tables/queries/base/: index_add.py  index_del.py  table_add.py  table_bak.py  table_del.py  table_res.py  table_upd.py  trigger_add.py  trigger_del.py
src/asagi_tables/queries/side/: __init__.py  fk_add.py  fk_del.py  index_add.py  index_del.py  table_add.py  table_bak.py  table_del.py  table_res.py
src/asagi_tables/side_populate/: __init__.py  singlethread.py
tests/: test_identifier_quoting.py  test_queries.py
